--- a/src/styles.css
+++ b/src/styles.css
@@ -194,11 +194,48 @@ body {
     margin-left: 1rem;
     cursor: pointer;
 }
-.modal {
+.modal-container {
     position: absolute;
     top: 0;
     z-index: 5;
-    display: none;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(155, 155, 155, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border: 0.4rem solid #DFCCA1;
+    border-radius: 2rem;
+    background-color:#fffcec;
+    box-sizing: border-box;
+    padding: 20px 20px;
+}
+.modal-title {
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.modal-text {
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 1rem;
+    line-height: 1.2rem;
+}
+.close-modal {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.2rem;
 }
 
 
@@ -293,6 +330,14 @@ body {
     .logo-container {
         flex-direction: column;
         align-items: flex-start;
+    }
+    .modal-title {
+        font-size: 18px;
+        font-weight: 700;
+    }
+    .modal-text {
+        font-size: 14px;
+        line-height: 18px;
     }
     @keyframes movesun {
         100% {top: -225px; right: -225px;}
