--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ body {
     position: absolute;
     top: 15px;
     left: 15px;
-    z-index: 2;
+    z-index: 8;
     display: flex;
 }
 .wave-front-container {
@@ -194,6 +194,7 @@ body {
     font-weight: 800;
     margin-left: 1rem;
     cursor: pointer;
+    user-select: all;
 }
 .modal-container {
     position: absolute;
